--- a/partners/templates/offers.html
+++ b/partners/templates/offers.html
@@ -82,7 +82,7 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
         </div>
         <div class='prtn-box-desc'>
         <p>
-          Programma dedicato alle aziende che lavorano quotidianamente il Free Software, con compotenze approfondite, capaci di rispondere alle esigenze dei clienti più esigenti.
+          Programma dedicato alle aziende che lavorano quotidianamente con il Free Software, con competenze approfondite, capaci di affrontare progetti complessi dallo sviluppo all'integrazione sistemistica.
         </p>
           
         </div>
@@ -129,7 +129,8 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
 
         <div class='prtn-box-desc'>
           <p>
-          Programma dedicato alle aziende che lavorano quotidianamente il Free Software, con compotenze approfondite, capaci di rispondere alle esigenze dei clienti più esigenti.
+          Programma dedicato alle aziende che lavorano quotidianamente con il Free Software, con competenze approfondite, capaci di rispondere alle esigenze dei clienti più esigenti incluse grandi aziende
+          e pubbliche amministrazioni.
           </p>
           <br>
           <h4>Benefit</h4>
