--- a/partners/static/css/style.css
+++ b/partners/static/css/style.css
@@ -14,6 +14,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom:20px;
 }
 
+
 ul {
   list-style-type:none;
   padding-left:0px;
@@ -1100,4 +1101,8 @@ input[type="color"]:focus,
   background-repeat: no-repeat;
   background-size: 40% auto;
   background-position: 115% 145%;
+}
+
+.alertify-log {
+  background-color:#692630 !important;
 }
