--- a/partners/templates/offers.html
+++ b/partners/templates/offers.html
@@ -380,7 +380,7 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
           </ul>
         </div>
         <div  class='prtn-box-button-cont'>
-          <a href="#signup/lpi-atp" 
+          <a href="#signup/lpi-atp-le" 
              class="button ">Aderisci ora</a>
         </div>
       </div>
